samples/_failures_safe/1761786068_248396_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4828def7.c: In function ‘main’:
./samples/SAFE/__tmp_4828def7.c:140:13: error: expected declaration or statement at end of input
  140 |             printf("Invalid format. Please use: YYYY-MM-DD HH:MM:SS LEVEL message\n");
      |             ^~~~~~
./samples/SAFE/__tmp_4828def7.c:140:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4828def7.c:140:13: error: expected declaration or statement at end of input
